--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,8 @@
 dotenv ../deepbible.env
 use nix
 source_up
+
+PGHOST=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' "$CONTAINER" 2>/dev/null | awk '{print $1}')
+
+export DATABASE_URL="postgresql://${PGUSER}:${PGPASSWORD}@${PGHOST}:${PGPORT}/${PGDATABASE}?sslmode=disable"
+export PGUSER PGPASSWORD PGHOST PGPORT PGDATABASE
