--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,14 @@ __pycache__
 *.txt
 data/
 helpers/
+bower_components/
+node_modules/
+.pulp-cache/
+output/
+generated-docs/
+.psc-package/
+.psc*
+.purs*
+.psa*
+.spago
+.direnv
