--- a/.envrc
+++ b/.envrc
@@ -2,7 +2,7 @@ dotenv ../deepbible.env
 use nix
 source_up
 
-PGHOST=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' "$CONTAINER" 2>/dev/null | awk '{print $1}')
+PGHOST=${PGHOST:-$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' "$CONTAINER" 2>/dev/null | awk '{print $1}')}
 
 export DATABASE_URL="postgresql://${PGUSER}:${PGPASSWORD}@${PGHOST}:${PGPORT}/${PGDATABASE}?sslmode=disable"
 export PGUSER PGPASSWORD PGHOST PGPORT PGDATABASE
